fixed clean install and tests